@@ -6,11 +6,10 @@ then
     exit 1
 fi
 
+export MAVEN_OPTS="-XX:+UseParNewGC -XX:+UseConcMarkSweepGC"
+
 mvn \
-    --offline \
-    --quiet \
     exec:java \
-    -Dlogback.configurationFile=logback-run.xml \
-    -Dexec.classpathScope=test \
+    -Dlogback.configurationFile=logback.xml \
     -Dexec.mainClass=org.netcrusher.tcp.main.TcpCrusherMain \
     -Dexec.args="$1 $2"
